index.html css js

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <title>movies</title>
   <script src="js/main.js"></script>
-  <link src="css/css.style"></link>
+  <link rel="stylesheet" href="css/style.css"></link>
 </head>
 <body>
 <h1>moviesapp</h1>
-
+<p> total recall is an awesome movie kate beckinsale is hot</p>
 
 </body>
 </html>
