css js index.html

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <p> this is a wikipedia search app that connects to wikipedia for the user to retrieve info</p>
 <div>
   <div class="data1">
-  <ul class="movies1">
-  </ul>
+    <ul class="movies1"></ul>
   </div>
+
   <div class="data2">
-   <ul>
+   <ul class="movies2">
     <li>The 100</li>
     <li>matrix reloaded</li>
     <li> Top gun</li>
