--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 <p> this is a wikipedia search app that connects to wikipedia for the user to retrieve info</p>
 <div>
   <div class="data1">
+    <h1 class="list1">Title 1</h1>
     <ul class="movies1"></ul>
   </div>
 
   <div class="data2">
+    <h1 class="list2">Title 2</h1>
    <ul class="movies2">
     <li>The 100</li>
     <li>matrix reloaded</li>
@@ -34,12 +36,14 @@
   </div>
 
   <div class="data3">
+    <h1 class="list3">Title 3</h1>
     <ul>
     <li>nikita</li>
     <li>Top gun </li>
    </ul>
   </div>
   <div class="data4">
+    <h1 class="list4">Title 4</h1>
     <ul>
     <li>napolean</li>
     <li>spartacus</li>
